--- a/to-do/package.json
+++ b/to-do/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/jest": "^22.2.2",
+    "@types/material-ui": "^0.21.1",
     "@types/node": "^9.6.0",
     "@types/react": "^16.0.40",
     "@types/react-dom": "^16.0.4",
