--- a/to-do/package.json
+++ b/to-do/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^9.6.0",
     "@types/react": "^16.0.40",
     "@types/react-dom": "^16.0.4",
+    "jest": "^22.4.3",
     "typescript": "^2.7.2"
   }
 }
